# capaplan

./: LICENSE  funcspec.md  pyproject.toml
capaplan/: cli.py
