[tool.poetry]
name = "capaplan"
version = "0.1.0"
description = "Simple capacity planning"
authors = ["Movpasd <54367524+movpasd@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
